<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SafeTexter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="title_activity_parent_settings">ParentSettings</string>
    <string name="save">Save</string>
    <string name="newCode">New Pass Code</string>
    <string name="code">CODE</string>
    <string name="timerAmount">Set Timer Before Car Shuts Off</string>
    <string name="time">MM:SS</string>
    <string name="TurnOO">Turn SafeTexter ON/OFF</string>
    <string name="settings">Settings</string>
    <string name="bluet">BlueTooth</string>
    <string name="discoverB">discover BT</string>

</resources>
